--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -1,10 +1,9 @@
-
 .colaborador {
     width: 280px;
 }
 
 .colaborador .cabecalho {
-    background-color:  #F0F0F0;
+    /* background-color:  #F0F0F0; */
     border-radius: 10px 10px 0px 0px;
 }
 .colaborador img {
